--- a/lab/pyproject.toml
+++ b/lab/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "kservews"
+name = "kservelab"
 version = "0.1.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
@@ -8,7 +8,10 @@ authors = ["Your Name <you@example.com>"]
 python = "^3.9"
 requests = "^2.28.1"
 argparse-dataclass = "^0.2.1"
-numpy = "^1.23.4"
+numpy = "^1.19"
+kserve = "^0.8.0"
+fastapi = "^0.85.2"
+starlette = "^0.20.4"
 
 [tool.poetry.dev-dependencies]
 
